--- a/Assignment-6/orbit-report/src/app/orbit-list/orbit-list.component.html
+++ b/Assignment-6/orbit-report/src/app/orbit-list/orbit-list.component.html
@@ -1,8 +1,9 @@
+
 <h3>Orbit Report</h3>
 <table>
    <tr class="header-row">
-      <th class="sortable">Name</th>
-      <th class="sortable">Type</th>
+      <th class="sortable" (click)="sort('name')">Name</th>
+      <th class="sortable" (click)="sort('type')">Type</th>
       <th>Operational</th>
       <th>Orbit Type</th>
       <th>Launch Date</th>
@@ -10,7 +11,7 @@
    <!-- TODO: put <tr *ngFor=""></tr> here -->
    <tr *ngFor="let orbit of satellites">
        <td>{{orbit.name}}</td>
-       <td>{{orbit.type}}</td>
+       <td [class.warning]= "orbit.isSpaceDebris()">{{orbit.type}}</td>
        <td>{{orbit.operational}}</td>
        <td>{{orbit.orbitType}}</td>
        <td>{{orbit.launchDate}}</td>
