--- a/Assignment-6/orbit-report/src/app/app.component.html
+++ b/Assignment-6/orbit-report/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <app-orbit-list [satellites]="displayList"></app-orbit-list>
 <div class="search-form">
-    <input type="search" id="searchTerm" name="searchTerm" (keyup.enter)="search(searchTerm.value)">
-    <button (click)="search(searchTerm.value)">Search</button>
+    <input type="search" name="searchTerm" (keyup.enter)="search($event.target.value)">
+    <button (Click)="search(searchTerm.value)">Search</button>
 </div>
